# eda

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  csv_tester.cpp  main.cpp  main3.cpp
2015-data/: 2015_raw_data_urls.txt  download_2015_raw_data.sh  fetch.hpp  fill_rtree_csv.hpp  initialize_database.sh
2015-data/csv-parser/: fast.h  rapidcsv.h
benchmark/: bench.hpp
geometry/: box.hpp  ops.hpp  point.hpp
geometry/impl/: box.tcc  point.tcc
index/: rtree.hpp  rtree_node.hpp  rtree_nodes.hpp
index/detail/: helpers.hpp  rtree_base.hpp  rtree_base_impl.hpp  rtree_inner.hpp  rtree_inner_impl.hpp  rtree_leaf.hpp  rtree_leaf_impl.hpp
index/detail/impl/: helpers.hpp  rtree_base_impl.hpp  rtree_inner_impl.hpp  rtree_leaf_impl.hpp
index/serial/: serial_query.hpp  serializer.hpp
serial/: serializer.hpp
